# stella_vslam

./: .dockerignore  .gitignore  .gitmodules  .travis.yml  Build.bat  CMakeLists.txt  CMakePresets.json  Dockerfile.cuda  Dockerfile.desktop  Dockerfile.iridescence  Dockerfile.ros  Dockerfile.ros2  Dockerfile.socket  LICENSE  LICENSE.fork  README.md  Setup.bat  main.yml  package.xml  sonar-project.properties  wercker.yml
example/: CMakeLists.txt  run_camera_localization.cc  run_camera_slam.cc  run_euroc_localization.cc  run_euroc_slam.cc  run_image_localization.cc  run_image_slam.cc  run_kitti_slam.cc  run_loop_closure.cc  run_tum_rgbd_localization.cc  run_tum_rgbd_slam.cc  run_video_localization.cc  run_video_slam.cc
example/aist/: equirectangular.yaml  fisheye.yaml  fisyeye.yaml
example/euroc/: EuRoC_mono.yaml  EuRoC_stereo.yaml
example/kitti/: KITTI_mono_00-02.yaml  KITTI_mono_03.yaml  KITTI_mono_04-12.yaml  KITTI_stereo_00-02.yaml  KITTI_stereo_03.yaml  KITTI_stereo_04-12.yaml
example/tum_rgbd/: TUM_RGBD_mono_1.yaml  TUM_RGBD_mono_2.yaml  TUM_RGBD_mono_3.yaml  TUM_RGBD_rgbd_1.yaml  TUM_RGBD_rgbd_2.yaml  TUM_RGBD_rgbd_3.yaml
example/tum_vi/: TUM_VI_mono.yaml  TUM_VI_stereo.yaml
example/util/: image_util.cc  image_util.h
src/pangolin_viewer/: CMakeLists.txt  color_scheme.cc  color_scheme.h  viewer.cc  viewer.h
src/stella_vslam/: CMakeLists.txt  config.cc  config.h  global_optimization_module.cc  global_optimization_module.h  mapping_module.cc  mapping_module.h  system.cc  system.h  tracking_module.cc  tracking_module.h  type.h
src/stella_vslam/camera/: CMakeLists.txt  base.cc  base.h  camera_factory.h  equirectangular.cc  equirectangular.h  fisheye.cc  fisheye.h  perspective.cc  perspective.h  radial_division.cc  radial_division.h
src/stella_vslam/data/: CMakeLists.txt  bow_database.cc  bow_database.h  bow_vocabulary.cc  bow_vocabulary.h  bow_vocabulary_fwd.h  camera_database.cc  camera_database.h  common.cc  common.h  frame.cc  frame.h  frame_observation.h  frame_statistics.cc  frame_statistics.h  graph_node.cc  graph_node.h  keyframe.cc  keyframe.h  landmark.cc  landmark.h  map_database.cc  map_database.h  marker.cc  marker.h  marker2d.cc  marker2d.h  orb_params_database.cc  orb_params_database.h  params_database.cc  params_database.h
src/stella_vslam/feature/: CMakeLists.txt  akaze_extractor.cc  akaze_extractor.h  akaze_params.cc  akaze_params.h  default_params.h  extractor.h  extractor_factory.h  extractor_params.h  feature_type.h  orb_extractor.cc  orb_extractor.h  orb_extractor_node.cc  orb_extractor_node.h  orb_impl.cc  orb_impl.h  orb_params.cc  orb_params.h  orb_point_pairs.h  params.cc  params.h  params_factory.h  sift_extractor.cc  sift_extractor.h  sift_params.cc  sift_params.h  surf_extractor.h  surf_params.h
src/stella_vslam/initialize/: CMakeLists.txt  base.cc  base.h  bearing_vector.cc  bearing_vector.h  perspective.cc  perspective.h
src/stella_vslam/io/: CMakeLists.txt  map_database_io.cc  map_database_io.h  map_database_io_base.h  map_database_io_factory.h  map_database_io_msgpack.cc  map_database_io_msgpack.h  map_database_io_sqlite3.cc  map_database_io_sqlite3.h  trajectory_io.cc  trajectory_io.h
src/stella_vslam/marker_detector/: CMakeLists.txt  aruco.cc  aruco.h  aruco_disabled.cc  aruconano.cc  aruconano.h  base.cc  base.h
src/stella_vslam/marker_model/: CMakeLists.txt  aruco.cc  aruco.h  aruconano.cc  aruconano.h  base.cc  base.h
src/stella_vslam/match/: CMakeLists.txt  angle_checker.h  area.cc  area.h  base.h  bow_tree.cc  bow_tree.h  fuse.cc  fuse.h  projection.cc  projection.h  robust.cc  robust.h  stereo.cc  stereo.h
src/stella_vslam/module/: CMakeLists.txt  frame_tracker.cc  frame_tracker.h  initializer.cc  initializer.h  keyframe_inserter.cc  keyframe_inserter.h  local_map_cleaner.cc  local_map_cleaner.h  local_map_updater.cc  local_map_updater.h  loop_bundle_adjuster.cc  loop_bundle_adjuster.h  loop_detector.cc  loop_detector.h  marker_initializer.cc  marker_initializer.h  relocalizer.cc  relocalizer.h  two_view_triangulator.cc  two_view_triangulator.h  type.h
src/stella_vslam/optimize/: CMakeLists.txt  global_bundle_adjuster.cc  global_bundle_adjuster.h  graph_optimizer.cc  graph_optimizer.h  local_bundle_adjuster.cc  local_bundle_adjuster.h  local_bundle_adjuster_factory.h  local_bundle_adjuster_g2o.cc  local_bundle_adjuster_g2o.h  local_bundle_adjuster_gtsam.cc  local_bundle_adjuster_gtsam.h  pose_optimizer.cc  pose_optimizer.h  pose_optimizer_factory.h  pose_optimizer_g2o.cc  pose_optimizer_g2o.h  pose_optimizer_gtsam.cc  pose_optimizer_gtsam.h  terminate_action.cc  terminate_action.h  transform_optimizer.cc  transform_optimizer.h
src/stella_vslam/optimize/internal/: CMakeLists.txt  distance_edge.h  landmark_vertex.h  landmark_vertex_container.h  marker_vertex_container.h
src/stella_vslam/optimize/internal/se3/: CMakeLists.txt  equirectangular_pose_opt_edge.h  equirectangular_reproj_edge.h  perspective_pose_opt_edge.h  perspective_reproj_edge.h  pose_opt_edge_wrapper.h  reproj_edge_wrapper.h  shot_vertex.h  shot_vertex_container.h
src/stella_vslam/optimize/internal_gtsam/: CMakeLists.txt  projection_factor.h
src/stella_vslam/publish/: CMakeLists.txt  frame_publisher.cc  frame_publisher.h  map_publisher.cc  map_publisher.h
src/stella_vslam/solve/: CMakeLists.txt  common.cc  common.h  essential_5pt.h  essential_iterative.h  essential_minimal.h  essential_solver.cc  essential_solver.h  fundamental_solver.cc  fundamental_solver.h  homography_solver.cc  homography_solver.h  pnp_solver.cc  pnp_solver.h  sim3_solver.cc  sim3_solver.h  triangulator.h
src/stella_vslam/solve/solve/: common.h  essential_solver.cc  essential_solver.h  fundamental_solver.cc  fundamental_solver.h  homography_solver.cc  pnp_solver.cc  triangulator.h
src/stella_vslam/util/: CMakeLists.txt  angle.cc  angle.h  converter.cc  converter.h  fancy_index.h  image_converter.cc  image_converter.h  random_array.cc  random_array.h  sqlite3.cc  sqlite3.h  stereo_rectifier.cc  stereo_rectifier.h  string.h  trigonometric.h  yaml.cc  yaml.h
(+241 files in other folders)
